<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/svijetlaPozadina"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        >
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/statistika"
                    android:textSize="18sp"
                    android:textColor="#6f6f6f"
                    android:id="@+id/slika1"
                    android:gravity="center"
                    android:padding="25dp"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_statistic"/>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unesi_racun"
                android:textSize="18sp"
                android:textColor="#6f6f6f"
                android:id="@+id/slika2"
                android:gravity="center"
                android:padding="25dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_add"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Kupci"
                android:textSize="18sp"
                android:textColor="#6f6f6f"
                android:id="@+id/slika3"
                android:gravity="center"
                android:padding="25dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_kupci"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Poslovnice"
                android:textSize="18sp"
                android:textColor="#6f6f6f"
                android:id="@+id/slika4"
                android:gravity="center"
                android:padding="25dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_poslovnice"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Proizvodi"
                android:textSize="18sp"
                android:textColor="#6f6f6f"
                android:id="@+id/slika5"
                android:gravity="center"
                android:padding="25dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_proizvodi"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Zaposlenici"
                android:textSize="18sp"
                android:textColor="#6f6f6f"
                android:id="@+id/slika6"
                android:gravity="center"
                android:padding="25dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_zaposlenici"/>

        </android.support.v7.widget.CardView>
    </GridLayout>
    </LinearLayout>
</ScrollView>
</layout>
